# llvm-project

clang/: CMakeLists.txt
clang-tools-extra/clang-change-namespace/: CMakeLists.txt
clang-tools-extra/clang-doc/: CMakeLists.txt
clang-tools-extra/clang-doc/tool/: CMakeLists.txt
clang-tools-extra/clang-reorder-fields/: CMakeLists.txt
clang-tools-extra/pp-trace/: CMakeLists.txt
clang-tools-extra/test/: CMakeLists.txt
clang/cmake/modules/: AddClang.cmake
clang/lib/: CMakeLists.txt
clang/lib/ARCMigrate/: CMakeLists.txt
clang/lib/AST/: CMakeLists.txt  MicrosoftMangle.cpp
clang/lib/Analysis/: CMakeLists.txt
clang/lib/Basic/: CMakeLists.txt  FileManager.cpp
clang/lib/CodeGen/: CGClass.cpp  CGDecl.cpp  CGExpr.cpp  CGExprAgg.cpp  CGExprComplex.cpp  CGExprScalar.cpp  CGStmt.cpp  CMakeLists.txt  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h  CodeGenPGO.cpp  CodeGenPGO.h  CoverageMappingGen.cpp  CoverageMappingGen.h  MCDCState.h
clang/lib/DirectoryWatcher/: CMakeLists.txt
clang/lib/Driver/: CMakeLists.txt
clang/lib/Frontend/: CMakeLists.txt  CompilerInstance.cpp  CompilerInvocation.cpp
clang/lib/FrontendTool/: CMakeLists.txt
clang/lib/Index/: CMakeLists.txt
clang/lib/Interpreter/: CMakeLists.txt
clang/lib/Lex/: PPDirectives.cpp
clang/lib/Parse/: CMakeLists.txt
clang/lib/Sema/: CMakeLists.txt
clang/lib/Serialization/: ASTReader.cpp  ASTWriter.cpp  CMakeLists.txt  InMemoryModuleCache.cpp  ModuleManager.cpp  PCHContainerOperations.cpp
clang/lib/Tooling/: CMakeLists.txt
clang/test/: CMakeLists.txt
clang/test/CoverageMapping/: branch-constfolded.cpp  logical.cpp  mcdc-class.cpp  mcdc-error-conditions.cpp  mcdc-error-nests.cpp  mcdc-logical-scalar-ids.cpp  mcdc-logical-stmt-ids-all.cpp  mcdc-logical-stmt-ids.cpp  mcdc-nested-expr.cpp
clang/test/Profile/: c-mcdc-class.cpp  c-mcdc-logicalop-ternary.c  c-mcdc-nested-ternary.c  c-mcdc-not.c  c-mcdc.c
clang/tools/clang-import-test/: CMakeLists.txt
clang/tools/clang-linker-wrapper/: CMakeLists.txt
clang/tools/clang-offload-bundler/: CMakeLists.txt
clang/tools/clang-offload-packager/: CMakeLists.txt
clang/tools/clang-offload-wrapper/: CMakeLists.txt
clang/tools/clang-scan-deps/: CMakeLists.txt  ClangScanDeps.cpp  EnumModules.cpp  EnumModules.h
clang/tools/clang-shlib/: CMakeLists.txt
clang/tools/diagtool/: CMakeLists.txt
clang/tools/driver/: CMakeLists.txt
clang/tools/libclang/: CMakeLists.txt
clang/unittests/Rewrite/: CMakeLists.txt
clang/utils/TableGen/: ArmBF16.cpp  ArmCdeBuiltinAliases.cpp  ArmCdeBuiltinCG.cpp  ArmCdeBuiltinDef.cpp  ArmCdeBuiltinSema.cpp  ArmCdeHeader.cpp  ArmFP16.cpp  ArmMveBuiltinAliases.cpp  ArmMveBuiltinCG.cpp  ArmMveBuiltinDef.cpp  ArmMveBuiltinSema.cpp  ArmMveHeader.cpp  ArmNeon.cpp  ArmNeonSema.cpp  ArmNeonTest.cpp  ArmSveBuiltinCG.cpp  ArmSveBuiltins.cpp  ArmSveHeader.cpp  ArmSveRangeChecks.cpp  ArmSveTypeFlags.cpp  AttrDocs.cpp  CMakeLists.txt  ClangAttrASTVisitor.cpp  ClangAttrClasses.cpp  ClangAttrHasAttributeImpl.cpp  ClangAttrImpl.cpp  ClangAttrList.cpp  ClangAttrNodeTraverse.cpp  ClangAttrPCHRead.cpp  ClangAttrPCHWrite.cpp  ClangAttrParsedAttrImpl.cpp  ClangAttrParsedAttrKinds.cpp  ClangAttrParsedAttrList.cpp  ClangAttrParserStringSwitches.cpp  ClangAttrSpellingListIndex.cpp  ClangAttrSubjectMatchRuleList.cpp  ClangAttrSubjectMatchRulesParserStringSwitches.cpp  ClangAttrTemplateInstantiate.cpp  ClangAttrTextNodeDump.cpp  ClangBasicReader.cpp  (+36 more)
compiler-rt/: CMakeLists.txt
compiler-rt/include/profile/: InstrProfData.inc
compiler-rt/lib/dfsan/: CMakeLists.txt
compiler-rt/lib/msan/: CMakeLists.txt
compiler-rt/lib/profile/: InstrProfilingFile.c  InstrProfilingMerge.c  (+1 more)
libcxx/: CMakeLists.txt
libcxx/include/: CMakeLists.txt  __string  locale  module.modulemap  module.modulemap.in  string  string_view
libcxx/src/: CMakeLists.txt
libcxxabi/: CMakeLists.txt
libcxxabi/src/: CMakeLists.txt
lld/COFF/: CMakeLists.txt
lld/Common/: CMakeLists.txt
lld/ELF/: CMakeLists.txt
lld/MachO/: CMakeLists.txt
lld/MinGW/: CMakeLists.txt
lld/wasm/: CMakeLists.txt
llvm/: CMakeLists.txt  dep.py  mod.py  scan_dyndep  xxx.py
llvm/benchmarks/: CMakeLists.txt
llvm/docs/: LangRef.rst
llvm/include/llvm/IR/: CMakeLists.txt  IntrinsicInst.h  Intrinsics.td
llvm/lib/TableGen/: CMakeLists.txt  Main.cpp  Record.cpp
llvm/module.cache/: CMakeLists.txt  genmodules.py
llvm/projects/: CMakeLists.txt
llvm/test/: CMakeLists.txt  lit.cfg.py
llvm/tools/dsymutil/: CMakeLists.txt
llvm/unittests/Frontend/: CMakeLists.txt
llvm/unittests/TableGen/: CMakeLists.txt
llvm/unittests/XRay/: CMakeLists.txt
llvm/utils/TableGen/: AsmMatcherEmitter.cpp  AsmWriterEmitter.cpp  Attributes.cpp  CMakeLists.txt  CTagsEmitter.cpp  CallingConvEmitter.cpp  CodeEmitterGen.cpp  CodeGenDAGPatterns.cpp  CodeGenIntrinsics.cpp  CodeGenIntrinsics.h  CodeGenRegisters.cpp  CodeGenSchedule.cpp  CodeGenTarget.cpp  CodeGenTarget.h  DAGISelEmitter.cpp  DFAEmitter.cpp  DFAPacketizerEmitter.cpp  DisassemblerEmitter.cpp  EmitLongStrLiterals.cpp  EmitLongStrLiterals.h  ExegesisEmitter.cpp  FastISelEmitter.cpp  FixedLenDecoderEmitter.cpp  FixedLenDecoderEmitter.h  GICombinerEmitter.cpp  GenDirectivesEnumDecl.cpp  GenDirectivesEnumGen.cpp  GenDirectivesEnumImpl.cpp  GlobalISelEmitter.cpp  InstrDocsEmitter.cpp  InstrInfoEmitter.cpp  IntrinsicEmitter.cpp  IntrinsicEnumsEmitter.cpp  IntrinsicImplEmitter.cpp  OptParserEmitter.cpp  OptRSTEmitter.cpp  PseudoLoweringEmitter.cpp  RISCVCompressInstEmitter.cpp  RegisterBankEmitter.cpp  RegisterInfoEmitter.cpp  (+9 more)
llvm/utils/TableGen/GlobalISel/: CMakeLists.txt
llvm/xxx/: CMakeLists.txt  LLVM_BinaryFormat.cpp  LLVM_Bitstream.cpp  LLVM_C.cpp  LLVM_Config_ABI_Breaking.cpp  LLVM_Config_Config.cpp  LLVM_IR.cpp  LLVM_MC.cpp  LLVM_MC_TableGen.cpp  LLVM_Object.cpp  LLVM_Pass.cpp  LLVM_Support_TargetRegistry.cpp  LLVM_TableGen.cpp  LLVM_Utils.cpp  LLVM_intrinsic_gen.cpp  _Builtin_stddef_max_align_t.cpp  m.py  std.cpp  std_config.cpp
utils/bazel/: configure.bzl
utils/bazel/llvm-project-overlay/compiler-rt/: BUILD.bazel
(+471 files in other folders)
