# This file is licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
)

licenses(["notice"])

cc_library(
    name = "config",
    defines = [
        "COMPILER_RT_HAS_ATOMICS=1",
        "COMPILER_RT_HAS_FCNTL_LCK=1",
        "COMPILER_RT_HAS_UNAME=1",
    ],
)

cc_library(
    name = "profile",
    srcs = glob([
        "lib/profile/*.c",
        "lib/profile/*.cpp",
        "lib/profile/*.h",
    ], exclude = [
        "lib/profile/WindowsMMap.c",
    ]),
    hdrs = glob([
        "include/profile/*.inc",
    ]),
    includes = [
        "include",
    ],
    copts = [
        "-Wno-pedantic",
        "-Wno-strict-prototypes",
    ],
    deps = [
        ":config",
    ],
    linkstatic = True,
)
